# icfpc2022

./: .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: test.yml
batch/: README.md  main.ts  package-lock.json  package.json  tsconfig.json
infra/: package-lock.json  package.json
infra/lib/: infra-stack.ts
solver/: Cargo.toml  Dockerfile  flamegraph.sh  lambda.js  solver.sh
solver/cli/: Cargo.toml
solver/core/: Cargo.toml  lambda.js
solver/core/src/: image.rs  initial_config.rs  isl.rs  lib.rs  simulator.rs
solver/core/src/ai/: annealing.rs  cross.rs  dp.rs  grid.rs  merge.rs  mod.rs  onecolor.rs  rect.rs  refine.rs  swap.rs
solver/lambda/: Cargo.toml
solver/lambda/src/: db.rs  main.rs
solver/src/: ai.rs  annealing_ai.rs  db.rs  dp_ai.rs  image.rs  initial_config.rs  isl.rs  main.rs  refine_ai.rs  simulator.rs
solver/src/ai/: annealing.rs  changecolor.rs  cross.rs  dp.rs  grid.rs  merge.rs  mod.rs  onecolor.rs  refine.rs
src/: ai.rs  image.rs  isl.rs  main.rs  refine_ai.rs  simulator.rs
www/: next.config.js  package-lock.json  package.json
www/lib/: db.ts
www/lib/schema/: run.ts
www/pages/: _app.tsx  _document.tsx  index.tsx  submit.tsx
www/pages/api/: runs.ts
www/pages/problem/: [id].tsx
www/pages/problems/: [id].tsx  index.tsx
www/pages/runs/: [id].tsx
www/public/: problems
