[package]
name = "icfpc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
glam = "0.21.3"
image = "0.24.3"
rand = "0.8.5"
structopt = { version = "0.3.26", default-features = false }
thiserror = "1.0.33"
