[package]
name = "icfpc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
aws-config = "0.48.0"
aws-sdk-dynamodb = "0.18.0"
aws-sdk-s3 = "0.18.0"
glam = "0.21.3"
image = "0.24.3"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
structopt = { version = "0.3.26", default-features = false }
thiserror = "1.0.33"
tokio = { version = "1", features = ["full"] }
