[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
env_logger = "0.9.0"
glam = "0.21.3"
image = "0.24.3"
log = "0.4.17"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
structopt = { version = "0.3.26", default-features = false }
thiserror = "1.0.33"
