[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
anyhow = "1.0.63"
aws-config = "0.48.0"
aws-sdk-dynamodb = "0.18.0"
aws-sdk-s3 = "0.18.0"
tokio = { version = "1", features = ["full"] }
